AC_PREREQ([2.69])
AC_INIT([hubble], [0.1], [clamberson@gmail.com])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([1.15 foreign tar-pax subdir-objects -Wall -Werror])
AM_SILENT_RULES([yes])
AC_PROG_CC
HUBBLE_CHECK_SYSTEMD
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
